# reddcoin

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  reddcoin-qt.pro
.tx/: config
contrib/: bitcoin-qt.pro  check-upstream.sh
contrib/bitrpc/: bitrpc.py
contrib/checkpoint/: checkpoint.py  example_config.cfg  readme.md
contrib/debian/: README.md  reddcoin-qt.desktop
contrib/debian/examples/: bitcoin.conf
contrib/debian/manpages/: bitcoin-qt.1  bitcoin.conf.5
contrib/gitian-descriptors/: README  README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-bitcoin.yml  gitian-osx-depends.yml  gitian-osx-native.yml  gitian-osx-qt.yml  gitian-osx-reddcoin.yml  gitian-win.yml  qt-win.yml
contrib/linearize/: README.md  example-linearize.cfg
contrib/macdeploy/: macdeployqtplus  notes.txt
contrib/pyminer/: pyminer.py
contrib/qos/: README  README.md  tc.sh
doc/: Doxyfile  README.md  README_windows.txt  build-arm.md  build-msw.md  build-osx.md  build-unix.md  files.md  gitian-building.md  readme-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-2.0.0.md
qa/pull-tester/: pull-tester.sh  run-bitcoind-for-test.sh.in
qa/rpc-tests/: README.md  txnmall.sh  util.py  util.sh  wallet.sh
share/: setup.nsi  setup.nsi.in
share/qt/: Info.plist  Info.plist.in
share/seeds/: generate-seeds.py
src/: Makefile.am  Makefile.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  alert.cpp  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  bloom.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.h  coins.h  compat.h  core.cpp  core.h  db.cpp  init.cpp  kernel.cpp  kernel.h  key.cpp  main.cpp  main.h  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  miner.cpp  miner.h  (+35 more)
src/crypto/: scrypt.h
src/hd/: hd.cpp  hd.h  mnemonic.cpp  mnemonic.h  seed.cpp  seed.h  wallet.h
src/hd/wordlist/: english.h
src/json/: json_spirit_writer_template.h
src/m4/: bitcoin_qt.m4
src/qt/: Makefile  Makefile.am  aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  paymentserver.h  peertablemodel.cpp  receiverequestdialog.cpp  recentrequeststablemodel.h  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  (+19 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fil.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_fr_FR.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_is.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_ms_MY.ts  bitcoin_nb.ts  bitcoin_nl.ts  bitcoin_pl.ts  (+19 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: Makefile  Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  Makefile.am  alert_tests.cpp  base58_tests.cpp  bignum.h  bloom_tests.cpp  key_tests.cpp  miner_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  script_tests.cpp  sighash_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  util_tests.cpp
